// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Navitem component > applies correct icon color when link is active 1`] = `
<DocumentFragment>
  <div
    data-testid="Home-navlink"
  >
    <a
      aria-current="page"
      class="sc-gtcBCx loUDii active"
      data-discover="true"
      data-testid="Home"
      data-tooltip-content="Home"
      data-tooltip-id="navlink"
      href="/home"
    >
      <div
        class="sc-bdDsCe iWngPQ"
      >
        <div
          class="sc-dkXsAU bkqkcD"
        >
          <svg
            data-testid="mock-icon"
            fill="var(--primary-200, #177BA6)"
            stroke="var(--primary-200, #177BA6)"
          />
        </div>
        <p
          class="sc-hKVpXn kLOHKk"
        >
          Home
        </p>
      </div>
    </a>
  </div>
</DocumentFragment>
`;

exports[`Navitem component > applies correct icon color when link is not active 1`] = `
<DocumentFragment>
  <div
    data-testid="Home-navlink"
  >
    <a
      class="sc-gtcBCx loUDii"
      data-discover="true"
      data-testid="Home"
      data-tooltip-content="Home"
      data-tooltip-id="navlink"
      href="/home"
    >
      <div
        class="sc-bdDsCe hyrtou"
      >
        <div
          class="sc-dkXsAU bkqkcD"
        >
          <svg
            data-testid="mock-icon"
          />
        </div>
        <p
          class="sc-hKVpXn ejjrDG"
        >
          Home
        </p>
      </div>
    </a>
  </div>
</DocumentFragment>
`;

exports[`Navitem component > does not apply active styles when link is not active 1`] = `
<DocumentFragment>
  <div
    data-testid="Home-navlink"
  >
    <a
      class="sc-gtcBCx loUDii"
      data-discover="true"
      data-testid="Home"
      data-tooltip-content="Home"
      data-tooltip-id="navlink"
      href="/home"
    >
      <div
        class="sc-bdDsCe hyrtou"
      >
        <div
          class="sc-dkXsAU bkqkcD"
        >
          <svg
            data-testid="mock-icon"
          />
        </div>
        <p
          class="sc-hKVpXn ejjrDG"
        >
          Home
        </p>
      </div>
    </a>
  </div>
</DocumentFragment>
`;

exports[`Navitem component > does not render expanded text when isExpanded is false 1`] = `
<DocumentFragment>
  <div
    data-testid="Home-navlink"
  >
    <a
      class="sc-gtcBCx loUDii"
      data-discover="true"
      data-testid="Home"
      data-tooltip-content="Home"
      data-tooltip-id="navlink"
      href="/home"
    >
      <div
        class="sc-bdDsCe iWngPQ"
      >
        <div
          class="sc-dkXsAU bkqkcD"
        >
          <svg
            data-testid="mock-icon"
            fill="var(--primary-200, #177BA6)"
            stroke="var(--primary-200, #177BA6)"
          />
        </div>
        <p
          class="sc-hKVpXn jTciuF"
        >
          Home
        </p>
      </div>
    </a>
  </div>
</DocumentFragment>
`;

exports[`Navitem component > does not render icon when not provided 1`] = `
<DocumentFragment>
  <div
    data-testid="Home-navlink"
  >
    <a
      class="sc-gtcBCx loUDii"
      data-discover="true"
      data-testid="Home"
      data-tooltip-content="Home"
      data-tooltip-id="navlink"
      href="/home"
    >
      <div
        class="sc-bdDsCe iWngPQ"
      >
        <div
          class="sc-dkXsAU bkqkcD"
        />
        <p
          class="sc-hKVpXn kLOHKk"
        >
          Home
        </p>
      </div>
    </a>
  </div>
</DocumentFragment>
`;

exports[`Navitem component > renders expanded text when isExpanded is true 1`] = `
<DocumentFragment>
  <div
    data-testid="Home-navlink"
  >
    <a
      class="sc-gtcBCx loUDii"
      data-discover="true"
      data-testid="Home"
      data-tooltip-content="Home"
      data-tooltip-id="navlink"
      href="/home"
    >
      <div
        class="sc-bdDsCe iWngPQ"
      >
        <div
          class="sc-dkXsAU bkqkcD"
        >
          <svg
            data-testid="mock-icon"
            fill="var(--primary-200, #177BA6)"
            stroke="var(--primary-200, #177BA6)"
          />
        </div>
        <p
          class="sc-hKVpXn kLOHKk"
        >
          Home
        </p>
      </div>
    </a>
  </div>
</DocumentFragment>
`;

exports[`Navitem component > renders icon when provided 1`] = `
<DocumentFragment>
  <div
    data-testid="Home-navlink"
  >
    <a
      class="sc-gtcBCx loUDii"
      data-discover="true"
      data-testid="Home"
      data-tooltip-content="Home"
      data-tooltip-id="navlink"
      href="/home"
    >
      <div
        class="sc-bdDsCe iWngPQ"
      >
        <div
          class="sc-dkXsAU bkqkcD"
        >
          <svg
            data-testid="mock-icon"
            fill="var(--primary-200, #177BA6)"
            stroke="var(--primary-200, #177BA6)"
          />
        </div>
        <p
          class="sc-hKVpXn kLOHKk"
        >
          Home
        </p>
      </div>
    </a>
  </div>
</DocumentFragment>
`;

exports[`Navitem component > renders with correct text 1`] = `
<DocumentFragment>
  <div
    data-testid="Home-navlink"
  >
    <a
      class="sc-gtcBCx loUDii"
      data-discover="true"
      data-testid="Home"
      data-tooltip-content="Home"
      data-tooltip-id="navlink"
      href="/home"
    >
      <div
        class="sc-bdDsCe iWngPQ"
      >
        <div
          class="sc-dkXsAU bkqkcD"
        >
          <svg
            data-testid="mock-icon"
            fill="var(--primary-200, #177BA6)"
            stroke="var(--primary-200, #177BA6)"
          />
        </div>
        <p
          class="sc-hKVpXn kLOHKk"
        >
          Home
        </p>
      </div>
    </a>
  </div>
</DocumentFragment>
`;

exports[`Navitem component > renders without crashing 1`] = `
<DocumentFragment>
  <div
    data-testid="Home-navlink"
  >
    <a
      class="sc-gtcBCx loUDii"
      data-discover="true"
      data-testid="Home"
      data-tooltip-content="Home"
      data-tooltip-id="navlink"
      href="/home"
    >
      <div
        class="sc-bdDsCe iWngPQ"
      >
        <div
          class="sc-dkXsAU bkqkcD"
        >
          <svg
            data-testid="mock-icon"
            fill="var(--primary-200, #177BA6)"
            stroke="var(--primary-200, #177BA6)"
          />
        </div>
        <p
          class="sc-hKVpXn kLOHKk"
        >
          Home
        </p>
      </div>
    </a>
  </div>
</DocumentFragment>
`;
